# easy-invoice-maker

./: LICENSE  README.org  default.nix  easy-invoice-maker  easy-invoice-maker.cabal  easy-invoice-maker.nix  email.mustache  email.yaml  flake.nix  haskell-invoice  haskell-invoice.cabal  haskell-invoice.nix  run  shell.nix  template.mustache
app/: Email.hs  Invoice.hs  Main.hs
examples/: 0047.yaml  defaults.yaml
nix/: Decimal.nix  mustache.nix
templates/: email.mustache
