cabal-version:      2.4
name:               haskell-invoice
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SlimTim10
maintainer:         slimtim10@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-invoice
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Invoice
        Email

    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
        DeriveGeneric
        DeriveAnyClass
        DataKinds
        OverloadedStrings
        LambdaCase
        ScopedTypeVariables
        DuplicateRecordFields
        FlexibleInstances
    build-depends:
        base ^>=4.14.3.0
      , time ^>=1.9.3
      , Decimal ^>=0.5.2
      , mustache ^>=2.4.0
      , yaml ^>=0.11.7.0
      , bytestring ^>=0.10.12.0
      , text ^>=1.2.4.1
      , unordered-containers ^>=0.2.14.0
      , safe-money ^>=0.9.1
      , safe-money-aeson ^>=0.1.1
      , filepath ^>=1.4.2.1
      , smtp-mail ^>=0.3.0.0
      , mime-mail ^>=0.5.1
      , process ^>=1.6.13.2
      , directory ^>=1.3.6.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates